--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -9,7 +9,7 @@ IMPORT\ BRANCH=Zweig importieren
 
 IMPORT\ CSV= CSV importieren
 
-EXPORT=Exportieren
+EXPORT=Export
 
 REMOVE\ LINK\ TO\ DIRECTORY= Link zum Verzeichnis l\u00f6schen
 
@@ -279,4 +279,4 @@ MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Bei Auswahl werden die Korpusb\u
 MENU_INCREASE_FONT_SIZE=Gr\u00f6\u00dfere Schriftart
 MENU_DECREASE_FONT_SIZE=Kleinere Schriftart
 MENU_RESET_FONT_SIZE=Gr\u00f6\u00dfe der Schriftart einstellen
-MENU_VIEW=Anzeigen 
+MENU_VIEW=Ansicht 
