--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -82,7 +82,7 @@ KEY\ NAME\:\ =Key Name:
 LONGFIED_ATTRIBUTE_VALUE=Value
 LONGFIELD_ATTRIBUTE=Attribute
 NEXT=Next
-INITIALIZING...=initializing...
+INITIALIZING...=initialising...
 #NOTE: This has to be something really unique that ordinary should not appear in the controlled vocabulary. The brackets should normally ensure this.
 <SELECT>=<select>
 FINISH=Finish
