--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -34,11 +34,11 @@ THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIR
 \ DESTINATION\ DIRECTORY=\ Destination Directory
 SAVE\ CHANGES=Save Changes
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=There are unsaved changes.\nSave now?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error while trying to show license. See error log for details.
-LICENSE=License
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error while trying to show licence. See error log for details.
+LICENSE=Licence
 ABOUT\ {0}=About {0}
 CLOSE=Close
-DISPLAY\ LICENSE=Display license
+DISPLAY\ LICENSE=Display licence
 ABOUTBOXTEXT=Archive Builder\nA local tool for organising linguistic data.\nMax Planck Institute for Psycholinguistics\n\nApplication originally designed and developed by Peter Withers\nCurrent maintenance and extentions by Peter Withers and Twan Goosen\nArbil also uses components of the IMDI API and Lamus Type Checker\n\nVersion: {0}.{1}.{2}\n{3}\nCompile Date: {4}\n\nJava version: {5}\nVendor: {6}\nJVM: {7} {8}\nOperating system: {9} {10} ({11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil has been licensed under the GNU General Public License version 2.\nClick the button below to see the full version of this license.
 SAVE\ TO\ DISK?=SAVE TO DISK?
 FIELD\ NAME=Field Name
