--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_en_US.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_en_US.properties
@@ -11,3 +11,7 @@ FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to add
 SUITABLE\ FAVOURITES=Suitable Favorites
 TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Available in the favorites menu
 INITIALIZING...=initializing...
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error while trying to show license. See error log for details.
+LICENSE=License
+DISPLAY\ LICENSE=Display license
+ABOUTBOXTEXT=Archive Builder\nA local tool for organizing linguistic data.\nMax Planck Institute for Psycholinguistics\n\nApplication originally designed and developed by Peter Withers\nCurrent maintenance and extentions by Peter Withers and Twan Goosen\nArbil also uses components of the IMDI API and Lamus Type Checker\n\nVersion: {0}.{1}.{2}\n{3}\nCompile Date: {4}\n\nJava version: {5}\nVendor: {6}\nJVM: {7} {8}\nOperating system: {9} {10} ({11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil has been licensed under the GNU General Public License version 2.\nClick the button below to see the full version of this license.
