--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/AvailableLanguages.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/AvailableLanguages.properties
@@ -1,2 +1,2 @@
 # The following language codes will determine the languages offered to the user and must reflect the translations in this package
-LANGUAGE\ CODES=en_GB,en_US,it,es,de
+LANGUAGE\ CODES=de,en_GB,en_US,es,it
