--- a/arbil/release_notes.txt
+++ b/arbil/release_notes.txt
@@ -34,6 +34,10 @@ in the 'Options' menu. (#1153)
 - REMOTE CORPUS TREE: A context menu option to add any selected remote node
 to the root of the 'Remote Corpus' tree is now available. (#1692)
 
+- DELETION: Nodes and fields can be deleted from the table (horizontal
+view where there is a node per row) through the context menu of the row itself
+or the column header respectively. (#1276) 
+
 ** CHANGES **
 
 These parts of the Arbil functionality have changed:
@@ -71,12 +75,20 @@ or not. (#1272, #1403)
 processed. This increases performance, especially with large collections of
 CMDI files. (#1755, #1797)
 
+- LOGGING: Logging has been made more configurable (as explained in the help
+section on this topic) and output can be monitored on different levels of detail
+in the new 'log console' available through the 'Help' menu when running the 
+installed version of the application. (#2793)
+
 ** FIXES **
 
 Among other, mostly minor, bugfixes, the following issues have been resolved:
 
 - FIELD DESCRIPTIONS: Missing field descriptions have been added for a large
 number of IMDI fields. (#657)
+
+- XML RESOURCES: Arbil will no longer attempt to open CMDI resources that are
+XML files themselves 
 
 ** KNOWN ISSUES **
 
