--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -9,7 +9,7 @@ IMPORT\ BRANCH=Zweig importieren
 
 IMPORT\ CSV= CSV importieren
 
-EXPORT=Export
+EXPORT=Exportieren
 
 REMOVE\ LINK\ TO\ DIRECTORY= Link zum Verzeichnis l\u00f6schen
 
