added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -137,7 +137,7 @@ ARBIL\ FORUM\ (WEBSITE)=Arbil Forum (Website)
 YES=yes
 
 RUN\ SETUP\ WIZARD=Run setup wizard
-
+#no translation to be seen in Arbil-programme unless your computer is set to the same language as Arbil
 ABOUT=About
 
 HELP=Help
