started dutch localisation in branch

--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -15,7 +15,7 @@ REMOVE\ LINK\ TO\ DIRECTORY= Link zum Verzeichnis l\u00f6schen
 
 SHOW\ HIDDEN\ FILES=Verborgene Ordner anzeigen
 
-ADD\ WORKING\ DIRECTORY=Arbeitsverzeichnis hinzuf\u00fcgen
+ADD\ WORKING\ DIRECTORY=Versie kon niet worden hersteld, geen veranderingen gemaakt
 
 REMOVE\ REMOTE\ LOCATION=Entfernten Speicherort entfernen
 
