--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-CLARIN\ INSTANCE=Ejemplo Clarin
+CLARIN\ INSTANCE=Ejemplo CLARIN
 CATALOGUE=Cat\u00e1logo
 SESSION=Sesi\u00f3n
 \ (LOADING)=\ (cargando)
