--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_nl.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_nl.properties
@@ -1,130 +1,129 @@
-CLARIN\ INSTANCE=CLARIN Instance
-CATALOGUE=Catalogue
-SESSION=Session
-\ (LOADING)=\ (loading)
-OTHER=Other
-DELETE\ NODE=Delete Node
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error deleting node, check the log file via the help menu for more information.
-FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Failed to load {0} locations. See error log for details.
-ERROR=Error
-COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Could not find or load locations. Adding default locations.
-FAVOURITES=Favourites
-WORKING\ DIRECTORIES=Working Directories
-REMOTE\ CORPUS=Remote corpus
-LOCAL\ CORPUS=Local corpus
-WARNING=WARNING
-FILES=Files
-THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=This action will save all pending changes on {0} to disk. Continue?
-REMEMBER\ MY\ CHOICE=Remember my choice
-\ FORMATTED=\ formatted
-VIEW\ IMDI\ XML=View IMDI XML
-THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=The node must be saved first.\nSave now?
-FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=Failed to open the remote location: {0}
-OPEN\ IN\ EXTERNAL\ APPLICATION=Open In External Application
-FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Failed to open the file. Please check that it is accessible and has an application associated with it.\n\nDo you want to open the parent directory?
-FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Failed to find the file: {0}
-SELECTION=Selection
-DIRECTORIES=Directories
-METADATA\ FILES=Metadata Files
-THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=The selected export directory is not empty. On export, you will have the\nchoice to either override or create duplicates of any present files.\nDo you want to continue?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=The export directory\n\"{0}\"\ndoes not exist.\nPlease select or create a directory.
-\ DESTINATION\ DIRECTORY=\ Destination Directory
-SAVE\ CHANGES=Save Changes
-THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=There are unsaved changes.\nSave now?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error while trying to show licence. See error log for details.
-LICENSE=Licence
-ABOUT\ {0}=About {0}
-CLOSE=Close
-DISPLAY\ LICENSE=Display licence
-ABOUTBOXTEXT=Archive Builder\nA local tool for organising linguistic data.\nMax Planck Institute for Psycholinguistics\n\nApplication originally designed and developed by Peter Withers\nCurrent maintenance and extentions by Peter Withers and Twan Goosen\nArbil also uses components of the IMDI API and Lamus Type Checker\n\nVersion: {0}.{1}.{2}\n{3}\nCompile Date: {4}\n\nJava version: {5}\nVendor: {6}\nJVM: {7} {8}\nOperating system: {9} {10} ({11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil has been licensed under the GNU General Public License version 2.\nClick the button below to see the full version of this license.
-SAVE\ TO\ DISK?=SAVE TO DISK?
-FIELD\ NAME=Field Name
-VALUE=Value
-RESOURCE=Resource
-NOT\ SUPPORTED=Not supported
-MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Moving IMDI metadata to CMDI metadata files is currently not supported
-INSERT\ NODE\ ERROR=Insert node error
-ERROR\ MOVING\ NODES=Error moving nodes
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Could not move {0} due to error. See log for details. Continue moving nodes?
-CANCEL=Cancel
-ABORT=Abort
-SKIP=Skip
-MOVE\ ALL=Move all
-MOVE=Move
-MOVE_SOURCE_NODE_TO_TARGET_NODE=Move {0} to {1}?
-SELECT\ EXPORT\ DESTINATION=Select export destination
-SELECT\ NODES\ TO\ EXPORT=Select nodes to export
-NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=No nodes are selected. Select at least one node to export.
-AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=An error occurred while exporting favourites:\n{0}.\nSee error log for details.
-EXPORT\ COMPLETE=Export complete
-FAVOURITES\ HAVE\ BEEN\ EXPORTED=Favourites have been exported
-FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=An error occurred while importing favourites:\n{0}.\nSee error log for details.
-IMPORT\ COMPLETE=Import complete
-FAVOURITES\ HAVE\ BEEN\ IMPORTED=Favourites have been imported
-SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Select favourites export to import
-FAVOURITES\ EXPORT\ FILE=Favourites export file
-EXPORT\ SELECTION=Export selection
-REFRESH=Refresh
-IMPORT\ FROM\ DISK=Import from disk
-FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called {0}.
-FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Press the import button, then choose an existing directory that has an exported collection of favourites. 
-EXPORT\ FAVOURITES=Export favourites
-IMPORT\ FAVOURITES=Import favourites
-FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Select one or more favourites that you wish to export from the list below, then press the export button. Then select the directory to which you would like to export the selected favourites.\n\n Hint: you can use modifier keys on the keyboard to select or deselect individual favourites (CTRL or CMD) or to select a range (SHIFT).
-PREVIOUS=Previous
+CLARIN\ INSTANCE=CLARIN-instantie
+CATALOGUE=Catalogus
+SESSION=Sessie
+\ (LOADING)=\ (aan het laden)
+OTHER=Andere
+DELETE\ NODE=Knoop verwijderen
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Fout bij het verwijderen van een knoop, zie foutlog voor meer informatie.
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=De locatie {0} kon niet worden geladen. Zie foutlog voor details.
+ERROR=Fout
+COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=De lokaties konden niet worden gevonden or geladen. Zie foutlog voor details.
+FAVOURITES=Favorieten
+WORKING\ DIRECTORIES=Werkmappen
+REMOTE\ CORPUS=Extern corpus
+LOCAL\ CORPUS=Lokaal corpus
+WARNING=LET OP
+FILES=Bestanden
+THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Door deze actie zullen alle wijzigingen in {0} worden opgeslagen. Doorgaan?
+REMEMBER\ MY\ CHOICE=Onthoud mijn keuze
+\ FORMATTED=\ geformateerd
+VIEW\ IMDI\ XML=IMDI XML bekijken
+THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=De knoop moet eerst worden opgeslagen. \nNu opslaan?
+FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=De volgende externe locatie kon niet worden geopend: {0}
+OPEN\ IN\ EXTERNAL\ APPLICATION=In externe applicatie openen
+FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Het openen van het bestand is mislukt. Controleer s.v.p. of het beschikbaar is \nen of er een applicatie is ge\u00efnstalleerd waarmee het kan worden geopend.\n\nWilt u de bovenliggende map openen?
+FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Kon bestand niet vinden: {0}
+SELECTION=Selectie
+DIRECTORIES=Mappen
+METADATA\ FILES=Metadatabestanden
+THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=De geselecteerd exportmap is niet leeg. Tijdens het exportern kunt u \nkiezen bestaande bestanden te overschrijven of om een nieuwe kopie\nte maken.\nWilt u doorgaan?
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=De exportmap\n"{0}"\nbestaat niet.\nKies of maak s.v.p. een map.
+\ DESTINATION\ DIRECTORY=\ Bestemmingsmap
+SAVE\ CHANGES=Wijzigingen opslaan
+THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Er zijn onopgeslagen wijzigingen.\nNu opslaan?
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Fout tijdens het weergaven van de licentie. Zie foutlog voor details.
+LICENSE=Licentie
+ABOUT\ {0}=Over {0}
+CLOSE=Sluiten
+DISPLAY\ LICENSE=Licentie tonen
+ABOUTBOXTEXT=Archive Builder\nEen lokaal hulpmiddel voor het organiseren van linguistische data.\nMax Planck Institute voor Psycholinguistiek\n\nDe applicatie is oorspronkelijk ontworpen en ontwikkeld door Peter Withers\nHuidig onderhoud en uitbreidingen door Peter Withers en Twan Goosen\nArbil gebruikt ook componenten van de IMDI API en Lamus Type Checker\n\nVersie: {0}.{1}.{2}\n{3}\nCompilatiedatum: {4}\n\nJava-versie: {5}\nVendor: {6}\nJVM: {7} {8}\nBesturingssysteem: {9} {10} ({11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil wordt verspreid onder de GNU General Public License version 2.\nKlik op de knop hieronder om de volledige versie van deze licentie te zien.
+SAVE\ TO\ DISK?=OPSLAAN?
+FIELD\ NAME=Veldnaam
+VALUE=Waarde
+RESOURCE=Bestand
+NOT\ SUPPORTED=Niet ondersteund
+MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=IMDI-metadata naar CMDI-bestanden verplaatsen wordt op dit moment niet ondersteund.
+INSERT\ NODE\ ERROR=Fout bij invoegen knoop
+ERROR\ MOVING\ NODES=Fout bij het verplaatsen van knopen
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Kon {0} niet verplaatsen door een fout. Zie foutlog voor details. Doorgaan met verplaatsen?
+CANCEL=Annuleren
+ABORT=Afbreken
+SKIP=Overslaan
+MOVE\ ALL=Alles verplaatsen
+MOVE=Verplaatsen
+MOVE_SOURCE_NODE_TO_TARGET_NODE={0} naar {1} verplaatsen?
+SELECT\ EXPORT\ DESTINATION=Selecteer exportbestemming
+SELECT\ NODES\ TO\ EXPORT=Selecteer knopen om te exporteren
+NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Er zijn geen knopen geselecteerd. Selecteer tenminste een te exporteren knoop.
+AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Er is een fout opgetreden bij het exporteren van favorieten:\n{0}.\nZie foutlog voor details.
+EXPORT\ COMPLETE=Exporteren voltooid
+FAVOURITES\ HAVE\ BEEN\ EXPORTED=De favorieten zijn ge\u00ebxporteerd
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Er is een fout opgetreden bij het importeren van favorieten:\n{0}.\nZie foutlog voor details.
+IMPORT\ COMPLETE=Importeren voltooid
+FAVOURITES\ HAVE\ BEEN\ IMPORTED=De favorieten zijn ge\u00efmporteerd
+SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Selecteer favorietenexport om te importeren
+FAVOURITES\ EXPORT\ FILE=Favorietenexportbestand
+EXPORT\ SELECTION=Selectie exporteren
+REFRESH=Verversen
+IMPORT\ FROM\ DISK=Importeren van schijf
+FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=De map moet een bestand {0} bevatten.
+FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Druk op de importeerknop en kies een bestaande map die al een ge\u00ebxporteerde verzameling favorieten bevat.
+EXPORT\ FAVOURITES=Favorieten exporteren
+IMPORT\ FAVOURITES=Favorieten importeren
+FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Selecteer \u00e9\u00e9n of meer favorieten om te exporteren uit de lijst hieronder en druk daarna op de exportknop. Kies dan de map waarnaar u de favorieten wil exporteren.\n\nTip: met CTRL of CMD kunt u individuele favorieten (de)selecteren, met shift kunt u een hele reeks in \u00e9\u00e9n keer selecteren.
+PREVIOUS=Vorige
 #'Key' as in IMDI key
-CHANGE\ KEY\ NAME=Change key name
-APPLY=Apply
-KEY\ NAME\:\ =Key Name: 
-LONGFIED_ATTRIBUTE_VALUE=Value
-LONGFIELD_ATTRIBUTE=Attribute
-NEXT=Next
-INITIALIZING...=initialising...
+CHANGE\ KEY\ NAME=Verander naam van Key
+APPLY=Toepassen
+KEY\ NAME\:\ =Key-naam: 
+LONGFIED_ATTRIBUTE_VALUE=Waarde
+LONGFIELD_ATTRIBUTE=Attribuut
+NEXT=Volgende
+INITIALIZING...=initialiseren...
 #NOTE: This has to be something really unique that ordinary should not appear in the controlled vocabulary. The brackets should normally ensure this.
-<SELECT>=<select>
-FINISH=Finish
-ARBIL\ WIZARD=Arbil wizard
-DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Do you really want to cancel the wizard?
-ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Error while getting wizard text. Please check the error log. 
-DISCARD\ CHANGES=Discard changes
-DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=Doing this will reset the list of remote locations. Do you want to go back a step in the wizard?
-SETUP_NO\ LOCATIONS\ SPECIFIED=No locations specified
-SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet specified any remote locations. Are you sure you want to continue?
-SETUP_SELECT\ A\ METADATA\ FORMAT=Select a metadata format
-SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Select at least one of the options before continuing
-SETUP_NO\ PROFILES\ SELECTED=No profiles selected
-SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet selected profiles to use. Are you sure you want to continue?
-SETUP_CLARIN\ PROFILES=Clarin Profiles
-CANCEL\ WIZARD=Cancel wizard
+<SELECT>=<selecteren>
+FINISH=Klaar
+ARBIL\ WIZARD=Arbil-wizard
+DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Wilt u de wizard echt afbreken?
+ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Fout bij het ophalen van de tekst voor de wizard. Bekijk s.v.p. de foutlog.
+DISCARD\ CHANGES=Wijzigingen verwerpen
+DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=Dit zal de oorspronkelijke lijst van externe locaties terugzetten. Wilt u een stap teruggaan in de wizard?
+SETUP_NO\ LOCATIONS\ SPECIFIED=Geen lokaties opgegeven
+SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=U heeft geen externe lokaties opgegegeven. Wilt u toch doorgaan?
+SETUP_SELECT\ A\ METADATA\ FORMAT=Kies een metadataformaat
+SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Kies minstens \u00e9\u00e9n optie om door te kunnen gaan
+SETUP_NO\ PROFILES\ SELECTED=Geen profielen geselecteerd
+SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=U heeft geen te gebruiken profielen geselecteerd. Wilt u toch doorgaan?
+SETUP_CLARIN\ PROFILES=CLARIN-profielen
+CANCEL\ WIZARD=Wizard annuleren
 #tool tip for 'show' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides 'hide fields')
-FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Invalid width for column {0}
-FIELD_VIEW_TABLE_COLUMN\ WIDTH=Column width
-FIELD_VIEW_TABLE_HIDE=Hide
-FIELD_VIEW_TABLE_SHOW\ ONLY=Show Only
-FIELD_VIEW_TABLE_COLUMN\ NAME=Column Name
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Alleen gekozen velden tonen (verbergt andere velden, overschrijft 'velden verbergen')
+FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Ongeldige breedte voor {0}
+FIELD_VIEW_TABLE_COLUMN\ WIDTH=Kolombreedte
+FIELD_VIEW_TABLE_HIDE=Verbergen
+FIELD_VIEW_TABLE_SHOW\ ONLY=Enkel tonen
+FIELD_VIEW_TABLE_COLUMN\ NAME=Kolomnaam
 #tool tip for 'hide' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no 'show only' selection is made) 
-ARBIL\ LOG\ CONSOLE=Arbil log console
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Verberg geselecteerde velden (alleen actief als er geen 'enkel tonen'-selectie is gemaakt)
+ARBIL\ LOG\ CONSOLE=Arbil log-console
 #button text, imperative (stop search)
 SEARCH_STOP=stop
-#Real numbers
-SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=searched: {0}/{1} found: {2}
-SEARCH\ CANCELED=search canceled
-SEARCH_CONNECTING\ TO\ SERVER=connecting to server
+SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=doorzocht: {0}/{1} gevonden: {2}
+SEARCH\ CANCELED=zoeken geannuleerd
+SEARCH_CONNECTING\ TO\ SERVER=verbinden met server
 #button text, imperative
-SEARCH_SEARCH=search
-COLUMN\ WIDTH\ INVALID=Column width invalid
+SEARCH_SEARCH=zoeken
+COLUMN\ WIDTH\ INVALID=Kolombreedte ongeldig
 #{0} is placeholder for column name, keep!
-TABLE_FIXED\ WIDTH={0} [fixed width]
+TABLE_FIXED\ WIDTH={0} [vaste breedte]
 #node {0} in parent {1}
 %S\ IN\ %S={0} in {1}
-NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=No fields matched the data on the clipboard.
-NO\ DATA\ TO\ PASTE.=No data to paste.
-CONTINUE?=Continue?
+NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=Geen overeenkomende velden met gegevens op klembord
+NO\ DATA\ TO\ PASTE.=Geen gegevens om te plakken.
+CONTINUE?=Doorgaan?
 #{0} is the number of fields that will be affected
-THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=There are {0} fields that will have their contents deleted by this paste action.\n\n
-TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Two fields of the same name are to be pasted into this table,\nthis will cause at least one field to be overwritten by another.\n
+THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=Er is/zijn {0} veld(en) die hun waarde zullen verliezen door te plakken.\n\n
+TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Twee velden van dezelfde naam worden in deze tabel geplakt,\n\u00e9\u00e9n van de twee zal worden overschreven.
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Inconsistent number of columns in the data to paste.\nThe pasted data could be incorrect.
 INCORRECT\ DATA\ TO\ PASTE=Incorrect data to paste.\nThe data must be copied either from a table with a single node\nor by selecting individual cells in the table.
 PASTE=Paste
