--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-CLARIN\ INSTANCE=Esempio Clarin
+CLARIN\ INSTANCE=Esempio CLARIN
 CATALOGUE=Catalogo
 SESSION=Sessione
 \ (LOADING)=\ (caricamento in corso)
