--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -78,3 +78,7 @@ DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\
 A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=A controlled vocabulary could not be read.\n{0}\nSome fields may not show all options.
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Re-download Current Vocabularies
 LOAD\ CONTROLLED\ VOCABULARY=Load Controlled Vocabulary
+#Title of a dialogue shown at application exit when typechecking is not done
+TYPECHECKING_IN_PROGRESS=Typechecking in progress
+#Content of dialogue shown on application exit when typechecking has not finished
+FINISHING_TYPECHECKING=Finishing typechecking before application shutdown. Please wait...
