resource string update

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -12,7 +12,7 @@ ADD\ RESOURCE=Add Resource
 NEW\ {0}\ IN\ {1}=New {0} in {1}
 #{0} is the name of the newly added top level node (e.g. Session). This string is used as the title of the table that appears after adding a new node. E.g. 'New Session'.
 NEW\ {0}=New {0}
-INSERT\ NODE\ ERROR=Insert node error
+INSERT\ NODE\ ERROR=Error inserting node
 ADD\ NODE=Add Node
 NEW\ RESOURCE\ IN\ %S=New resource in {0}
 NEW\ RESOURCES\ IN\ %S=New resources in {0}
