translated two keys in services and corrected a couple of typos in menus

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -11,13 +11,13 @@ IMPORT\ CSV=Importar CSV
 
 EXPORT=Exportar
 
-REMOVE\ LINK\ TO\ DIRECTORY=Quitar enlace al directorio
+REMOVE\ LINK\ TO\ DIRECTORY=Eliminar enlace al directorio
 
 SHOW\ HIDDEN\ FILES=Mostrar archivos ocultos
 
 ADD\ WORKING\ DIRECTORY=Agregar directorio de trabajo
 
-REMOVE\ REMOTE\ LOCATION=Quitar ubicaci\u00f3n remota
+REMOVE\ REMOTE\ LOCATION=Eliminar ubicaci\u00f3n remota
 
 ADD\ DEFAULT\ LOCATIONS=Agregar ubicaciones predeterminadas 
 
@@ -33,7 +33,7 @@ HISTORY=Historial
 
 CHECK\ XML\ CONFORMANCE=Comprobar conformidad con XML
 
-REMOVE\ FROM\ FAVOURITES\ LIST=Quitar de la lista de favoritos 
+REMOVE\ FROM\ FAVOURITES\ LIST=Eliminar de la lista de favoritos 
 
 ADD\ TO\ FAVOURITES\ LIST=Agregar a la lista de favoritos
 
@@ -69,7 +69,7 @@ EDIT\ ALL\ METADATA=Editar todos los metadatos
 
 VIEW\ SELECTED=Ver nodo(s) seleccionado(s)
 
-REMOVE\ SELECTED\ ROWS=Quitar filas seleccionadas de la tabla
+REMOVE\ SELECTED\ ROWS=Eliminar filas seleccionadas de la tabla
 
 VIEW\ SELECTED\ ROWS=Ver filas seleccionadas
 
