--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -1,7 +1,7 @@
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manualmente
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manuale
 
-RE-IMPORT\ THIS\ BRANCH=Reimporta  questo ramo
+RE-IMPORT\ THIS\ BRANCH=Reimporta questo ramo
 
 RE-IMPORT\ THIS\ SESSION=Reimporta questa sessione
 
@@ -39,7 +39,7 @@ ADD\ TO\ FAVOURITES\ LIST=Aggiungi alla lista dei preferiti
 
 ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Aggiungi nodi figli alla lista dei preferiti
 
-ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Aggiungi risorse in blocco tramite lista preferiti
+ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Aggiungi risorse in blocco tramite lista dei preferiti
 
 ADD\ FROM\ FAVOURITES=Aggiungi dalla lista dei preferiti
 
@@ -143,7 +143,7 @@ TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
 THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che tutti i file locali di metadati siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conformit\u00e0 dei file locali di metadati con il formato XML 
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre la conformit\u00e0 dei file locali di metadati con il formato XML 
 
 THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno rese effettive dopo il riavvio di Arbil.
 
