--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
@@ -78,3 +78,5 @@ DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\
 A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=No se pudo leer uno de los vocabularios controlados.\n{0}\nAlgunos campos podr\u00edan no mostrar todas las opciones disponibles.
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Volver a descargar los vocabularios actuales
 LOAD\ CONTROLLED\ VOCABULARY=Cargar vocabulario controlado
+TYPECHECKING_IN_PROGRESS=Chequeo de tipos en curso
+FINISHING_TYPECHECKING=El chequeo di tipos terminar\u00e1 antes de que se apague la aplicaci\u00f3n. Esperar por favor...
