--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -78,3 +78,5 @@ A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ A
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica vocabolari correnti
 LOAD\ CONTROLLED\ VOCABULARY=Carica vocabolario controllato
 DOWNLOADED\:\ {0}\ FAILED\:\ {1}=scaricato/i: {0} non scaricato/i: {1}
+TYPECHECKING_IN_PROGRESS=Type checking in corso
+FINISHING_TYPECHECKING=Il type checking terminer\u00e0 prima dell'arresto dell'applicazione. Attendere prego...
