--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
@@ -86,3 +86,5 @@ DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\
 A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=Kontrolliertes Vokabular konnte nicht gelesen werden.\n{0}\nEinige Felder zeigen m\u00f6glicherweise nicht alle Optionen an.
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Aktuelles Vokabular neu herunterladen
 LOAD\ CONTROLLED\ VOCABULARY=Kontrolliertes Vokabular laden
+FINISHING_TYPECHECKING=Typechecking wird beendet vor dem Schlie\u00dfen der Anwendung. Bitte warten...
+TYPECHECKING_IN_PROGRESS=Typechecking wird ausgef\u00fchrt...
